--- a/Nodejs/codBase/client/index.html
+++ b/Nodejs/codBase/client/index.html
@@ -1,40 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de sesión</title>
-    <link rel="stylesheet" href="/css/styles.css"/>
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Neucha" rel="stylesheet">
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/dot-luv/jquery-ui.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Kaushan+Script|Neucha">
+    <link rel="stylesheet" href="css/styles.css" />
+</head>
+
+<body>
+    <!-- // Formulario de Acesso Login al Calendario // -->
     <div class="loginContainer">
-      <div class="loginTitle">Inicio de Sesión</div>
-      <div class="fields-Container">
-        <input type="text" id="user" placeholder="Usuario..." />
-        <input type="password" id="pass" placeholder="Contraseña..." />
-        <button id="login" class="loginButton">Ingresar</button>
-      </div>
+        <div class="loginTitle">Inicio de Sesión</div>
+        <div class="fields-Container">
+            <input type="text" id="user" placeholder="Usuario..." />
+            <input type="password" id="pass" placeholder="Contraseña..." />
+            <button id="login" class="loginButton">Ingresar</button>
+            <div id="userSignup">Aún no tienes cuenta? <a href="#" id="signuplink">Registrate!</a></div>
+        </div>
     </div>
-    <script src="/js/jquery.js"></script>
-    <script>
-        var nombreUsuario = $('#user')
-        var pass = $('#pass')
-        $('.loginButton').on('click', function(event) {
-            if (nombreUsuario.val() != "" && pass.val() != "") {
-                $.post('/login',{user: nombreUsuario.val(), pass: pass.val()}, function(response) {
-                    if (response == "Validado") {
-                        window.location.href = "http://localhost:3000/main.html"
-                    }else {
-                      console.log("r "+response);
-                    }
-                })
-            } else {
-                alert("Complete todos los campos")
-            }
-        })
-    </script>
-  </body>
+
+    <!-- // Modal-Dialog para registro de usuario // -->
+    <div id="signupuser">
+        <form autocomplete="off">
+            <div class="modal-container">
+                <div class="modal-row">
+                    <label>Nombres</label>
+                    <input type="text" id="usrfnames" placeholder="Primer y segundo(opcional) nombre..." required>
+                    <label>Apellidos</label>
+                    <input type="text" id="usrlnames" placeholder="Primer y segundo(opcional) apellido..." required>
+                </div>
+                <div class="modal-row">
+                    <label>Fecha de Nacimiento</label>
+                    <input type="text" id="usrdbirth" placeholder="AAAA-MM-DD" required>
+                    <label>Email</label>
+                    <input type="email" id="usremaila" placeholder="Dirección de correo electrónico..." required>
+                </div>
+                <div class="modal-row">
+                    <label>Contraseña</label>
+                    <input type="password" id="usrpasswd" placeholder="Contraseña de cuenta..." required>
+                    <label>Confirmación de contraseña</label>
+                    <input type="password" id="useragain" placeholder="Repetir contraseña de cuenta..." required>
+                </div>
+                <div class="modal-row">
+                    <input type="checkbox" id="termsconds" required><span> Acepta los <a href="#">términos y condiciones</a> de uso de la Agenda.</span>
+                </div>
+                <div class="modal-row">
+                    <button type="submit" class="ui-button ui-corner-all" disabled="disabled">Registrar</button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" type=" text/javascript "></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js" type="text/javascript"></script>
+    <script src="js/moment.min.js" type="text/javascript"></script>
+    <script src="js/access.js" type="text/javascript"></script>
+</body>
+
 </html>
